--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "barryvdh/laravel-debugbar": "^2.3",
         "doctrine/dbal": "^2.5",
         "phing/phing": "*",
-        "fabpot/php-cs-fixer": "1.*"
+        "fabpot/php-cs-fixer": "1.*",
+        "jakub-onderka/php-parallel-lint": "^0.9.2"
     },
     "autoload": {
         "classmap": [
