--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "prettus/l5-repository": "^2.6",
-        "laravel-ja/comja5": "~1"
+        "laravel-ja/comja5": "~1",
+        "dingo/api": "1.0.x@dev",
+        "tymon/jwt-auth": "^0.5.10"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
