--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel-ja/comja5": "~1",
         "dingo/api": "1.0.x@dev",
         "laravel/socialite": "2.*",
-        "tymon/jwt-auth": "^0.5.10"
+        "tymon/jwt-auth": "^0.5.10",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
