--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "dingo/api": "1.0.x@dev",
         "laravel/socialite": "2.*",
         "tymon/jwt-auth": "^0.5.10",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "zircote/swagger-php": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
